force-app/main/default/objects/SDO_Sales_GPT_Simulated_Reply__c/SDO_Sales_GPT_Simulated_Reply__c.object-meta.xml
<CustomObject>
    <label>Sales GPT Simulated Reply</label>
    <nameField>
        <label>Simulated Reply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales GPT Simulated Replies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>