force-app/main/default/objects/SDO_Sales_GPT_Simulated_Reply__c/fields/Einstein_GPT_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Einstein_GPT_Configuration__c</fullName>
    <label>Einstein GPT Configuration</label>
    <referenceTo>SDO_Einstein_GPT_Configuration__c</referenceTo>
    <relationshipName>SDO_Sales_GPT_Simulated_Replies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>