force-app/main/default/objects/SDO_Sales_GPT_Simulated_Reply__c/fields/List_View_Icon__c.field-meta.xml
<CustomField>
    <fullName>List_View_Icon__c</fullName>
    <label>List View Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>