force-app/main/default/objects/SDO_Sales_GPT_Simulated_Reply__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>