force-app/main/default/objects/SDO_Sales_GPT_Simulated_Reply__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Keyword__c</columns>
    <columns>Message_Type__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>