force-app/main/default/objects/SDO_Sales_GPT_Simulated_Reply__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>